Updated text content, fixed issue with mobile scaling and horizontal scroll

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,9 +1,6 @@
 @import "~bootstrap/scss/bootstrap";
 $fa-font-path: "/webfonts";
 $header-font: "Bebas_Neue", sans-serif;
-body {
-  overflow-x:hidden;
-}
 #main-header {
   background-color: #4689bd;
   color: #fff;
@@ -34,6 +31,11 @@ body {
 .fa-blue {
   color: #6eb0d9;
 }
+.width-full {
+    max-width: 100vw;
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
 @font-face {
   font-family: 'Bebas Neue';
   font-style: normal;
